--- a/lang/fr/README
+++ b/lang/fr/README
@@ -32,6 +32,7 @@ attachment             annexe
 authentication         authentification
 category               catégorie
 choice                 sondage
+connected              lié (merci ˆ Jean-François Nadeau)
 course category	       discipline
 department             département
 download               télécharger (vers votre ordinateur)
@@ -49,6 +50,7 @@ offline                hors-ligne
 post                   message
 quiz                   test
 scale                  barème
+separated              détaché (merci ˆ Jean-François Nadeau)
 server                 serveur
 social format	       informel
 topic                  thème
@@ -65,15 +67,13 @@ workshop               atelier
 
 TODO
   Beaucoup de choses encore. Entre autres :
-  - trouver une bonne traduction de "Separate and Connected ways of knowing",
-    de "Connected Learning", "Separate Learning" et de "Reflective Thinking" ;
-  - intégrer la traduction du dossier help de Jean-François Nadeau ;
+  - trouver une bonne traduction de "Reflective Thinking" ;
+  - finir l'intégration de la traduction du dossier help de
+    Jean-François Nadeau ;
   - traduire chatarea.php ;
   - traduire glossary.php ;
   - traduire label.php ;
-  - traduire pgassignment.php ;  
-  - terminer surveys.php.
-
+  - traduire pgassignment.php.
 
 Voici quelques liens que j'utilise :
   - Dictionnaire de l'internaute
