Some terms added

--- a/lang/fr/README
+++ b/lang/fr/README
@@ -32,7 +32,8 @@ attachment             annexe
 authentication         authentification
 category               catégorie
 choice                 sondage
-connected              lié (merci ˆ Jean-François Nadeau)
+connected              lié (merci à Jean-François Nadeau)
+cookies                cookies                 témoin
 course category	       discipline
 department             département
 download               télécharger (vers votre ordinateur)
@@ -50,7 +51,7 @@ offline                hors-ligne
 post                   message
 quiz                   test
 scale                  barème
-separated              détaché (merci ˆ Jean-François Nadeau)
+separated              détaché (merci à Jean-François Nadeau)
 server                 serveur
 social format	       informel
 topic                  thème
