German language files 21.12.03

--- a/lang/de/README
+++ b/lang/de/README
@@ -1,3 +1,5 @@
-The German translation does not currently have regular translators.
+Die deutsche Übersetzung wird betreut von
 
-If you can help, contact Martin Dougiamas.
+<a href="mailto:andre.krueger@wirab50.de">Andre Krüger</a> und <a href="mailto:rh@dialoge.net">Ralf Hilgenstock</a>.<br>
+<br>
+Die Diskussion erfolgt im <a href="http://moodle.org/course/view.php?id=18">deutschen Forum von Moodle</a>.
