--- a/lang/fr/README
+++ b/lang/fr/README
@@ -34,14 +34,15 @@ authentication         authentification
 category               catégorie
 choice                 sondage
 connected              lié (merci à Jean-François Nadeau)
-cookies                cookies                 témoin
+cookie                 cookie                  témoin
 course category	       discipline
 department             département
 dialogue               dialogue
 download               télécharger (vers votre ordinateur)
 email                  courriel, adresse de courriel
 emoticons              binettes
-entry                  contribution
+entry                  contribution (dans les forums)
+entry                  entrée (dans les glossaires)
 exercise               exercice
 feedback               feedback                rétroaction, remarque
 glossary               glossaire
@@ -49,26 +50,28 @@ grade                  note ou niveau
 guest                  visiteur anonyme
 hit                    requête
 journal                journal
-label                  
+label                  étiquette
 login                  connexion, se connecter
-logs                   événements
+logs                   journaux d'activité
 offline                hors-ligne
 post                   message
 quiz                   test
 scale                  barème
 separated              détaché (merci à Jean-François Nadeau)
 server                 serveur
-social format	       informel
-topic                  thème
-topics format	       thématique
+social format	       format informel
 smilies                binettes
-submissions            devoirs rendus
+submission             (devoir, document) remis, rendus
+submit                 remettre
 survey                 questionnaire
 teacher                enseignant
+topic                  thème
+topics format	       format thématique
 upload                 envoyer, déposer, télécharger vers le serveur
 user                   utilisateur
 username               nom d'utilisateur
 webquest
+weekly format          format hebdomadaire
 workshop               atelier
 
 
