Translation of Moodle 1.2

--- a/lang/pl/README
+++ b/lang/pl/README
@@ -2,13 +2,16 @@ Polish Translation
 -------------------
 
 
-Maintainer: Adam Pawe³czak <adam.pawelczak@wsb.poznan.pl>
+Maintainer:  Poznan School of Banking (Wyzsza Szkola Bankowa w Poznaniu)
+    Adam Pawe³czak <adam.pawelczak@wsb.poznan.pl>
+    Przemyslaw Polanski <ppolanski@pooh.wsb.poznan.pl>
 
 Contributors:
+Distance Education Centre at Gdansk University of Technology (DECTUG)
    Michal Wozniak , 
    Lukasz Wrona    
       
-   If you'd like to contribute any corrections or aditions, please
-   send them to adam.pawelczak@wsb.poznan.pl
+If you'd like to contribute any corrections or aditions, please
+send them to adam.pawelczak@wsb.poznan.pl
    
    Adam Pawe³czak, Poznañ, 2003-09-21
