All the strings in the php-files are translated as of 2004-02-27 Some help-files are still missing
Alla strängar i php-filerna  är översatta t o m 2004-02-27
Några hjälpfiler saknas fortfarande.

--- a/lang/sv/LAESMIG.txt
+++ b/lang/sv/LAESMIG.txt
@@ -1,3 +1,9 @@
+Log för redigering och komplettering av språkpaketet för svenska i Moodle 
+version 4.0 2004-03-03
+Anders Berggren anders@ikt-pedagogen.se
+Alla strängar i programfilerna fr o m 2004-02-27 är översatta. Några enstaka hjälpfiler är fortfarande på engelska.
+
+
 Log för redigering och komplettering av språkpaketet för svenska i Moodle  
 version 3.0 2003-12-19
 Anders Berggren anders@ikt-pedagogen.se
