--- a/lang/pt/README
+++ b/lang/pt/README
@@ -4,10 +4,21 @@ Portuguese (from Portugal) Translation
 Maintainer: Jaime E. Villate <villate@gnu.org>
 
 Contributors:
-   Paulo Figueira
+   Paulo Figueira, Portugal
+   Guida Querido, Portugal
+   Manuel Padilha, University of Porto
 
 If you'd like to contribute any corrections or aditions, please
 send them do villate@gnu.org.
+
+You can make some local changes to the translation to suit your needs.
+For instance, if you think your site will look better if you translate "Course
+Categories" as "Licenciaturas", instead of "Grupo de Disciplinas", as used in
+the Portuguese language pack, you can make a copy of the whole directory pt (under
+"lang" in the directory where you have installed Moodle) with a different
+name, for instance, pt_LX (maximum 5 characters). You will then see another
+language "pt_LX" among the choices, which you can choose as the preferred language
+for your site.
 
 Jaime Villate, Porto, 2003-09-09
 
