*** empty log message ***

--- a/lang/ca/README
+++ b/lang/ca/README
@@ -9,18 +9,19 @@ http://cent.uji.es
 mailto:cent@uji.es
 
 
-Colálaboren en les traduccions:
+Han colálaborat en aquesta traducció:
 
 - Jordi Adell <jordi@uji.es>
+- Clara Andrés <al051553@alumail.uji.es>
 - Puri Andrés <al058754@alumail.uji.es>
 - Carles Bellver <carles.bellver@cent.uji.es>
 - Fermín Cueva <fcueva@teleline.es>
 - Joan Queralt Gil <jqueralt@pie.xtec.es>
 
-Si voleu colálaborar, escriviu-nos a l'adreça cent@uji.es
+Si voleu colálaborar: 1) assegureu-vos de conèixer la Guia d'estil de Softcatalà i 2) escriviu-nos a l'adreça <cent@uji.es>.
 
 Tasques pendents:
 
-- Completar la traducció dels fitxers d'ajuda
+- Completar la traducció dels fitxers d'ajuda.
 - Normalitzar les traduccions d'acord amb la Guia d'estil 
-de Softcatalà
+de Softcatalà (sobretot les ajudes).
