--- a/lang/ja/README
+++ b/lang/ja/README
@@ -1,6 +1,6 @@
 Japanese Translation
 ------------------------
-Last Modify:2003/03/12
+Last Modify:2003/03/13
 
 Author: Mitsuhiro Yoshida(mits@mitstek.com)
 http://mitstek.com/
@@ -8,6 +8,7 @@ http://mitstek.com/
 Special thanks to Thomas N. Robb(http://www.kyoto-su.ac.jp/~trobb/)
 Special thanks to Paul Shew(http://ac.shew.jp)
 Special thanks to Timothy Takemoto(http://www.eigodaigaku.com)
+Special thanks to Toshihiro Kita(http://t-kita.net/)
 
 All files are written in EUC-JP.
 Any suggestion for Japanese version, feel free to contact me.
