Added Paul Shew's translation.

--- a/lang/ja/README
+++ b/lang/ja/README
@@ -2,13 +2,13 @@ Japanese Translation
 ------------------------
 Last Modify:2003/03/13
 
-Author: Mitsuhiro Yoshida(mits@mitstek.com)
-http://mitstek.com/
+Translator: Mitsuhiro Yoshida(http://mitstek.com/)
+Translator: Paul Shew(http://ac.shew.jp)
 
 Special thanks to Thomas N. Robb(http://www.kyoto-su.ac.jp/~trobb/)
-Special thanks to Paul Shew(http://ac.shew.jp)
 Special thanks to Timothy Takemoto(http://www.eigodaigaku.com)
 Special thanks to Toshihiro Kita(http://t-kita.net/)
+
 
 All files are written in EUC-JP.
 Any suggestion for Japanese version, feel free to contact me.
