Typos, oh no typos again!

--- a/lang/fi/README
+++ b/lang/fi/README
@@ -2,5 +2,5 @@ Finnish Translation
 -------------------
 
 Author: Petri Asikainen (paca@sci.fi)
-Tranlation site: http://www.skto.fi/moodle_fi
+Translation site: http://www.skto.fi/moodle_fi
 
