translated by koen roggemans

--- a/lang/nl/docs/module_files.txt
+++ b/lang/nl/docs/module_files.txt
@@ -1,18 +1,18 @@
-ABOUT THIS DIRECTORY
---------------------
+OVER DEZE MAP
+-------------
 
-DO NOT CHANGE, RENAME OR MOVE ANY OF THE FILES 
-IN THIS DIRECTORY unless you REALLY know what 
-you are doing.  
+WIJZIG, HERMOEM OF VERPLAATS GEEN ENKEL BESTAND
+UIT DEZE MAP tenzij je HEEL GOED weet wat je
+aan het doen bent.
 
-Changing these files could mess up your course.
+Het veranderen van deze bestanden kan je site 
+verknoeien.
 
-This directory contains files uploaded to your 
-course within particular modules (mostly by 
-students), such as assignment submissions and 
-forum attachments.
+Deze map bevat bestanden die door je site binnen 
+verschillende modules geüpload zijn (meestal door
+leerlingen),  zoals ingestuurde opdrachten en
+forum bijlages.
 
-The names of the directories and files within 
-this directory are very specific and are 
-automatically maintained by Moodle.
-
+De namen van de mappen en bestanden in deze map
+zijn heel specifiek en worden automatisch beheerd
+door Moodle.
