Changed french name of "survey" activity to "consultation" to avoid confusion

--- a/lang/fr/README
+++ b/lang/fr/README
@@ -63,7 +63,7 @@ social format	       format informel
 smilies                binettes
 submission             (devoir, document) remis, rendus
 submit                 remettre
-survey                 questionnaire
+survey                 consultation pédagogique
 teacher                enseignant
 topic                  thème
 topics format	       format thématique
