--- a/lang/ja/README
+++ b/lang/ja/README
@@ -2,12 +2,14 @@ Japanese Translation
 ------------------------
 Last Modify:2003/04/03
 
-Translator: Mitsuhiro Yoshida(http://mitstek.com/)
-Translator: Paul Shew(http://ac.shew.jp)
+[Translators]
+Mitsuhiro Yoshida(http://mitstek.com/)
+Paul Shew(http://ac.shew.jp)
 
-Special thanks to Thomas N. Robb(http://www.kyoto-su.ac.jp/~trobb/)
-Special thanks to Timothy Takemoto(http://www.eigodaigaku.com)
-Special thanks to Toshihiro Kita(http://t-kita.net/)
+[Credits]
+Thomas N. Robb(http://www.kyoto-su.ac.jp/~trobb/)
+Timothy Takemoto(http://www.eigodaigaku.com)
+Toshihiro Kita(http://t-kita.net/)
 
 
 All files are written in EUC-JP.
