Daniel Miksik added into the list of authors of this lang pack.

--- a/lang/cs/README
+++ b/lang/cs/README
@@ -9,10 +9,12 @@ AUTOØI PØEKLADU
 
 David Mudrák (david.mudrak@pedf.cuni.cz)
 Univerzita Karlova v Praze, Pedagogická fakulta
-Katedra informaèních technologií a technické výchovy
 
 Jindøich Jindøich (jindrich@jindrich.org)
 Univerzita Karlova v Praze, Pøírodovìdecká fakulta
+
+Daniel Mik¹ík (miksik@phil.muni.cz)
+Masarykova univerzita v Brnì, Filozofická fakulta
 
 
 LICENCE
