Updated for release 1.3

--- a/lang/cs/README
+++ b/lang/cs/README
@@ -8,14 +8,15 @@ $Id$
 AUTOØI PØEKLADU
 
 David Mudrák (david.mudrak@pedf.cuni.cz)
-Univerzita Karlova v Praze, Pedagogická fakulta
+ Univerzita Karlova v Praze, Pedagogická fakulta
 
 Jindøich Jindøich (jindrich@jindrich.org)
-Univerzita Karlova v Praze, Pøírodovìdecká fakulta
+ Univerzita Karlova v Praze, Pøírodovìdecká fakulta
 
+Jiøí Rambousek (jiri.rambousek@phil.muni.cz)
 Daniel Mik¹ík (miksik@phil.muni.cz)
-Masarykova univerzita v Brnì, Filozofická fakulta
-
+Zdenìk Pytela (pytela@phil.muni.cz)
+ Masarykova univerzita v Brnì, Filozofická fakulta
 
 LICENCE
 
