rename module in Thai and mostly rephrasing

--- a/lang/th/README
+++ b/lang/th/README
@@ -1,1 +1,4 @@
-By wimma singhanart (wim) ... minkowski@ntlworld.com
+Files Update 6/06/2004  Rename modules and  rephasing..
+
+
+Thai Language by   M.Minkowski ( Wim Singhanart)  minkowski@ntlworld.com 
