Latest translation for Moodle 1.3  by M.Minkowski

--- a/lang/th/README
+++ b/lang/th/README
@@ -1,4 +1,1 @@
-Files Update 6/06/2004  Rename modules and  rephasing.. for Moodle 1.3
-
-
-Thai Language by   M.Minkowsk  minkowski@ntlworld.com 
+Thai Language Translation by M.Minkowski   minkowski@ntlworld.com
