*** empty log message ***

--- a/lang/ca/README
+++ b/lang/ca/README
@@ -55,11 +55,12 @@ quiz.php           No assignat
 resource.php       CENT
 scheduler.php      No assignat
 scorm.php          CENT
-survey.php         No assignat
+survey.php                 No assignat
+wiki.php           CENT
 workshop.php       No assignat
 
-admin.php          CENT
-auth.php           CENT
+admin.php                   CENT
+auth.php                     CENT
 calendar.php       CENT
 countries.php      CENT
 editor.php         CENT
