Better fix for Bug #1530 - Wiki diffs useless when using HTML editor

--- a/mod/wiki/TODO.txt
+++ b/mod/wiki/TODO.txt
@@ -8,7 +8,8 @@ Mike:
  - Grading
 
 Michael:
- - More Logging
+ - Upload: There is an error when having a bin html-wiki: File does not show up
+   - Log when up- or download
  - Notify when page changes
 
 Unassigned or not ready:
